2011-10-16 21:18  paddockd

	* [r284] ChangeLog, contrib/makefile.mingw32-pa-display,
	  makefile.mingw32-asio-display, makefile.mingw32-display,
	  makefile.mingw32-wasapi-display, scripts/buildall-win,
	  src/slimaudio/slimaudio.c, src/slimaudio/slimaudio_http.c,
	  src/slimproto/poll.c, src/slimproto/poll.h,
	  src/slimproto/slimproto.c, src/slimproto/slimproto.h,
	  src/squeezeslave/help.c, src/squeezeslave/interactive.c,
	  src/squeezeslave/squeezeslave.c, src/squeezeslave/squeezeslave.h:
	  Implemented slimproto_discover for windows.
	  Added poll function for mingw32 in poll.c and poll.h from ffmpeg
	  snapshot.
	  Added inet_ntop function for mingw32 in slimproto.c from Paul
	  Vixie.
	  Moved setNonblocking function from interactive.c to help.c.
	  Now only using winsock2.h.
	  Updated windows makefiles to include poll.c in SLIMPROTOFILES.
	  Increased FIRMWARE to 6.
	  Increased revision to 284.

2011-10-14 13:40  paddockd

	* [r283] ChangeLog, contrib/makefile.freebsd-sparc64,
	  contrib/makefile.linux24-ffmpeg-alsa-display,
	  contrib/makefile.linux24-nofpu-alsa-display,
	  contrib/makefile.linux26-armel-alsa,
	  contrib/makefile.linux26-armel-nofpu-alsa-display,
	  contrib/makefile.linux26-armel-nofpu-oss-display,
	  contrib/makefile.linux26-armel-oss,
	  contrib/makefile.linux26-ffmpeg-alsa-display,
	  contrib/makefile.linux26-mipsel-nofpu-alsa,
	  contrib/makefile.linux26-mipsel-nofpu-oss,
	  contrib/makefile.linux26-mipsel-oss,
	  contrib/makefile.linux26-nofpu-alsa-display,
	  contrib/makefile.linux26-ppc-alsa-display,
	  contrib/makefile.mingw32-ffmpeg-display,
	  contrib/makefile.mingw32-pa-display,
	  makefile.linux24-alsa-display, makefile.linux24-display,
	  makefile.linux26-alsa-display, makefile.linux26-display,
	  makefile.linux26-i64-alsa-display, makefile.mingw32-asio-display,
	  makefile.mingw32-display, makefile.mingw32-wasapi-display,
	  makefile.osx-i64-display, makefile.osx-intel-display,